--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #052461;
+    --primary-color: #011846;
     --secondary-color: #B6B4FE;
     --nav-font-color: #ffffff;
     --font-color1: #fcfcfc;
@@ -66,7 +66,6 @@ nav {
 #menu {
     font-size: 1.5rem;
     background-color: var(--primary-color);
-    border: 2px solid var(--nav-font-color);
     color: var(--nav-font-color);
     cursor: pointer;
     padding: 0.5rem 1rem;
